--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -12,6 +12,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_feed.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_feed">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_feed" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -43,6 +44,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_stalkerbuster.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_stalkerbuster">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_stalkerbuster" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -126,6 +128,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_challengeresponse.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_challengeresponse">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_challengeresponse" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -177,6 +180,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_feed.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_feed">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_feed" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -276,6 +280,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_contentrewrite.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_contentrewrite">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_contentrewrite" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -483,6 +488,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_entrysplit.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_entrysplit">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_entrysplit" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -531,6 +537,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_tooltips.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_tooltips">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_tooltips" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -562,6 +569,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_typesetbuttons.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_typesetbuttons">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_typesetbuttons" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -613,6 +621,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_mailcc.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_mailcc">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_mailcc" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -684,7 +693,7 @@
         <h4 class="plugin_summary">DSGVO / GDPR: General Data Protection Regulation</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_dsgvo_gdpr</dt>
-            <dd class="plugin_version">Version 1.40 (GPL, Last Updated 2018-04-10)</dd>
+            <dd class="plugin_version">Version 1.41 (GPL, Last Updated 2018-04-21)</dd>
             <dd class="plugin_maintainers">Serendipity Team</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -708,6 +717,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_feed.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_feed">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_feed" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -723,6 +733,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_backendrss.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_backendrss">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_backendrss" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -999,6 +1010,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_head_nugget.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_head_nugget">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_head_nugget" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -1014,6 +1026,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_randomblogdescription.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_randomblogdescription">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_randomblogdescription" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -1033,6 +1046,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_layout_printerfriendly.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_layout_printerfriendly">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_layout_printerfriendly" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -1080,6 +1094,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_templatechooser.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_templatechooser">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_templatechooser" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -1147,6 +1162,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_httpauth.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_httpauth">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_httpauth" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -1230,6 +1246,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_comics.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_comics">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_comics" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -1341,6 +1358,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_livesearch.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_livesearch">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_livesearch" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -1404,6 +1422,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_entrylastmodified.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_entrylastmodified">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_entrylastmodified" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -1627,7 +1646,7 @@
         <h4 class="plugin_summary">DSGVO / GDPR: General Data Protection Regulation</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_dsgvo_gdpr</dt>
-            <dd class="plugin_version">Version 1.40 (GPL, Last Updated 2018-04-10)</dd>
+            <dd class="plugin_version">Version 1.41 (GPL, Last Updated 2018-04-21)</dd>
             <dd class="plugin_maintainers">Serendipity Team</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -1795,6 +1814,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_loginform.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_loginform">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_loginform" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -1862,6 +1882,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_blogpdf.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_blogpdf">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_blogpdf" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -2105,6 +2126,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_realtimecomments.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_realtimecomments">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_realtimecomments" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -2268,6 +2290,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_kubrickheader.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_kubrickheader">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_kubrickheader" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -2367,6 +2390,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_glossary.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_glossary">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_glossary" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -2527,6 +2551,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_textile.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_textile">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_textile" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -2542,6 +2567,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_typoquote.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_typoquote">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_typoquote" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -2557,6 +2583,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_textwiki.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_textwiki">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_textwiki" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -2572,6 +2599,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_wordwrap.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_wordwrap">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_wordwrap" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -2603,6 +2631,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_mimetex.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_mimetex">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_mimetex" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -2650,6 +2679,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_responsiveimages.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_responsiveimages">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_responsiveimages" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -2665,6 +2695,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_tooltips.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_tooltips">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_tooltips" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -2680,6 +2711,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_unstrip_tags.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_unstrip_tags">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_unstrip_tags" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
