--- a/plugins/inc/bygroups_sidebar_en.htm
+++ b/plugins/inc/bygroups_sidebar_en.htm
@@ -68,6 +68,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_creativecommons.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_creativecommons">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_plugin_creativecommons" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -83,6 +84,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_externalphp.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_externalphp">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_plugin_externalphp" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -226,6 +228,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_randomquotes.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_randomquotes">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_plugin_randomquotes" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -241,6 +244,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_shoutcast.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_shoutcast">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_plugin_shoutcast" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -256,6 +260,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_socialbookmarks.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_socialbookmarks">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_plugin_socialbookmarks" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -387,6 +392,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_sidebarlogo.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_sidebarlogo">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_plugin_sidebarlogo" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -402,6 +408,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_timezones.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_timezones">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_plugin_timezones" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -469,6 +476,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_category_dhtml_menu.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_category_dhtml_menu">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_plugin_category_dhtml_menu" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -631,6 +639,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_templatedropdown.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_templatedropdown">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_plugin_templatedropdown" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -666,6 +675,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_coppermine.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_coppermine">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_plugin_coppermine" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -681,6 +691,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_photoblog.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_photoblog">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_plugin_photoblog" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -748,6 +759,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_karmaranking.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_karmaranking">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_plugin_karmaranking" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -827,6 +839,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_topexits.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_topexits">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_plugin_topexits" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
@@ -842,6 +855,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_topreferrers.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_topreferrers">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_plugin_topreferrers" aria-label="Anchor" data-anchorjs-icon=""></a></li>
         </ul>
     </div>
 
