--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -693,8 +693,8 @@
         <h4 class="plugin_summary">DSGVO / GDPR: General Data Protection Regulation</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_dsgvo_gdpr</dt>
-            <dd class="plugin_version">Version 1.51 (GPL, Last Updated 2018-04-23)</dd>
-            <dd class="plugin_maintainers">Serendipity Team</dd>
+            <dd class="plugin_version">Version 1.52 (GPL, Last Updated 2018-04-24)</dd>
+            <dd class="plugin_maintainers">Serendipity Team, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">This plugin aims to help blog owners to apply conformity to the General Data Protection Regulation Act.</p>
@@ -1646,8 +1646,8 @@
         <h4 class="plugin_summary">DSGVO / GDPR: General Data Protection Regulation</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_dsgvo_gdpr</dt>
-            <dd class="plugin_version">Version 1.51 (GPL, Last Updated 2018-04-23)</dd>
-            <dd class="plugin_maintainers">Serendipity Team</dd>
+            <dd class="plugin_version">Version 1.52 (GPL, Last Updated 2018-04-24)</dd>
+            <dd class="plugin_maintainers">Serendipity Team, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">This plugin aims to help blog owners to apply conformity to the General Data Protection Regulation Act.</p>
