--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -136,11 +136,11 @@
         <h4 class="plugin_summary">Spamblock (Bayes)</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_spamblock_bayes</dt>
-            <dd class="plugin_version">Version 1.03 (GPL, Last Updated 2018-04-06)</dd>
+            <dd class="plugin_version">Version 1.04 (GPL, Last Updated 2018-04-24)</dd>
             <dd class="plugin_maintainers">kleinerChemiker, Malte Paskuda, based upon b8 by Tobias Leupold, Mario Hommmel, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.2</dd>
         </dl>
-        <p class="plugin_description">Detects Spam via an algorithmus which learns.</p>
+        <p class="plugin_description">Detects SPAM via an algorithm which learns.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_spamblock_bayes.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_spamblock_bayes">GitHub</a></li>
@@ -152,7 +152,7 @@
         <h4 class="plugin_summary">Spamblock Bee (Honeypot, Hidden Captcha)</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_spamblock_bee</dt>
-            <dd class="plugin_version">Version 1.3.3 (GPL, Last Updated 2018-04-06)</dd>
+            <dd class="plugin_version">Version 1.3.4 (GPL, Last Updated 2018-04-24)</dd>
             <dd class="plugin_maintainers">Grischa Brockhaus, Janek Bevendorff</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
