--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -1198,6 +1198,22 @@
         </ul>
     </div>
 
+    <div id="serendipity_event_portier" class="plugin">
+        <h4 class="plugin_summary">Portier Email Authentication</h4>
+        <dl class="plugin_meta">
+            <dt class="plugin_name">serendipity_event_portier</dt>
+            <dd class="plugin_version">Version 1.0.1 (GPL, Last Updated 2018-04-27)</dd>
+            <dd class="plugin_maintainers">Grischa Brockhaus, Malte Paskuda, Ian</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
+        </dl>
+        <p class="plugin_description">Allows authors to authenticate only using their email.</p>
+        <ul class="plugin_actions">
+            <li class="plugin_download"><a href="#additional_plugins/serendipity_event_portier.zip">Download</a></li>
+            <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_portier">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_portier" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_portier/ChangeLog">ChangeLog</a></li>
+        </ul>
+    </div>
+
     <div id="serendipity_event_userprofiles" class="plugin">
         <h4 class="plugin_summary">User Profiles</h4>
         <dl class="plugin_meta">
@@ -1530,7 +1546,7 @@
         <h4 class="plugin_summary">Share Buttons</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_social</dt>
-            <dd class="plugin_version">Version 0.15 (GPL, Last Updated 2018-04-06)</dd>
+            <dd class="plugin_version">Version 0.16 (GPL, Last Updated 2018-04-27)</dd>
             <dd class="plugin_maintainers">onli, Matthias Mees, Thomas Hochstein, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
