Sync Spartacus - documentary website link fix

--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -504,7 +504,6 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_staticpage.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_staticpage">GitHub</a></li>
-            <li class="plugin_website"><a href="https://ophian.github.io/">Documentation</a><li>
             <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_staticpage" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_staticpage/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
@@ -925,7 +924,6 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_staticpage.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_staticpage">GitHub</a></li>
-            <li class="plugin_website"><a href="https://ophian.github.io/">Documentation</a><li>
             <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_staticpage" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_staticpage/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
@@ -2502,8 +2500,8 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_mobile_output.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_mobile_output">GitHub</a></li>
-            <li class="plugin_website"><a href="http://c.mobile-seo.de/">Documentation</a><li>
             <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_mobile_output" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_mobile_output/ChangeLog">ChangeLog</a></li>
+            <li class="plugin_website"><a href="http://c.mobile-seo.de/">Documentation</a></li>
         </ul>
     </div>
 
