--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -2492,8 +2492,8 @@
         <h4 class="plugin_summary">Markup: Mobile Output</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_mobile_output</dt>
-            <dd class="plugin_version">Version 1.08 (GPL, Last Updated 2018-03-27)</dd>
-            <dd class="plugin_maintainers">Pelle Boese, Grischa Brockhaus; iAN</dd>
+            <dd class="plugin_version">Version 1.09 (GPL, Last Updated 2018-04-27)</dd>
+            <dd class="plugin_maintainers">Pelle Boese, Grischa Brockhaus; Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">This plugin handles mobile devices and outputs optimized XHTML MP markup if it detects a mobile browser and a specially optimized site for iPhone and iPod Touch. It also scales images to fit the display size.</p>
@@ -2501,7 +2501,6 @@
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_mobile_output.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_mobile_output">GitHub</a></li>
             <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_mobile_output" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_mobile_output/ChangeLog">ChangeLog</a></li>
-            <li class="plugin_website"><a href="http://c.mobile-seo.de/">Documentation</a></li>
         </ul>
     </div>
 
