--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -692,7 +692,7 @@
         <h4 class="plugin_summary">DSGVO / GDPR: General Data Protection Regulation</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_dsgvo_gdpr</dt>
-            <dd class="plugin_version">Version 1.52 (GPL, Last Updated 2018-04-24)</dd>
+            <dd class="plugin_version">Version 1.52 (GPL, Last Updated 2018-05-01)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -1544,8 +1544,8 @@
         <h4 class="plugin_summary">Share Buttons</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_social</dt>
-            <dd class="plugin_version">Version 0.16 (GPL, Last Updated 2018-04-27)</dd>
-            <dd class="plugin_maintainers">onli, Matthias Mees, Thomas Hochstein, Ian</dd>
+            <dd class="plugin_version">Version 0.17 (GPL, Last Updated 2018-05-01)</dd>
+            <dd class="plugin_maintainers">onli, Matthias Mees, Thomas Hochstein, Ian, Mario Hommel</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Show social share buttons for services like Facebook and Twitter using shariff.</p>
@@ -1660,7 +1660,7 @@
         <h4 class="plugin_summary">DSGVO / GDPR: General Data Protection Regulation</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_dsgvo_gdpr</dt>
-            <dd class="plugin_version">Version 1.52 (GPL, Last Updated 2018-04-24)</dd>
+            <dd class="plugin_version">Version 1.52 (GPL, Last Updated 2018-05-01)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
