Add NGINX server to installation capabilities

--- a/hc/en/installation.html
+++ b/hc/en/installation.html
@@ -229,7 +229,7 @@
 
 <h4 id="docs-requirements">Requirements</h4>
 
-<p>Serendipity is tailored for the Apache Webserver. However, people are successfully running Serendipity with Microsoft IIS and Lighttpd. When using Serendipity on Windows servers, pay attention to always enter path references using forward slashes (‘/’) instead of the notation using backslashes (“C:\…\”).</p>
+<p>Serendipity is tailored for the Apache Webserver. However, people are successfully running Serendipity with NGINX, Microsoft IIS and LightTPD. When using Serendipity on Windows servers, pay attention to always enter path references using forward slashes (‘/’) instead of the notation using backslashes (“C:\…\”).</p>
 
 <p>For full operation, Serendipity relies on .htaccess files that your Virtual Host must allow. For Apache, this requires the <code>Allow Override File Info Indexes Limit</code> (or <code>Allow Override All</code>) option set to the directory of your Serendipity installation.</p>
 
