--- a/about/index.html
+++ b/about/index.html
@@ -131,14 +131,14 @@
 
             <p>Since <strong>plugins</strong> are an essential part of Serendipity, this repository holds a strongly maintained
             <a href="https://github.com/ophian/additional_plugins">additional_plugins</a> repository. The <strong>Styx Spartacus</strong>
-            plugin is able to work with it - Serendipity is not.</p>
+            plugin is able to work with it - while Serendipity Origin is not.</p>
 
             <p>The Serendipity Styx help documentation is found here at the Styx
             <a href="/hc/">Help Center</a> and the <strong>Frequently Asked Questions</strong>
             <a href="/hc/en/faq/">FAQ</a> page at here. You are requested to read all about
             it there, if the Book has left over some questions, or you need some quick advice.
             Some important changes between the two Serendipity editions will have to be added to the Styx Wiki or this page sooner or
-            later, I assume, but have already been ported to the <a href="/book/">Styx Book</a>.</p>
+            later, I assume, but mostly have already been ported to the <a href="/book/">Styx Book</a>.</p>
 
             <hr>
 
