Changed italic quotation für readability

--- a/hc/en/code-primer.html
+++ b/hc/en/code-primer.html
@@ -308,7 +308,7 @@ print_r($entries);
 
 <h4 id="docs-database-layers">Database layers</h4>
 
-<p>The database layer offers a central framework through “<em>include/db/db.inc.php</em>”. Serendipity uses plain SQL statements for its queries. We try to use database-agnostic standard SQL wherever possible, so that it runs on most servers.</p>
+<p>The database layer offers a central framework through <em>“include/db/db.inc.php”</em>. Serendipity uses plain SQL statements for its queries. We try to use database-agnostic standard SQL wherever possible, so that it runs on most servers.</p>
 
 <p>If that is not possible, certain code-forks are deployed to use specific queries for specific database layers; However, those places are very few. The advantage of using central SQL is that it also creates very readable, easy SQL.</p>
 
