--- a/next/index.html
+++ b/next/index.html
@@ -101,7 +101,7 @@
         <div class="blog-post__content">
             <h3 id="Next">The Next page:</h3>
 
-            <p>There is really nothing <strong>next</strong> for the Serendipity Styx “<em>Next page</em>” yet. Maybe some other - “<em>next</em>” day..! <span class="emoji">😇</span></p>
+            <p>There is really nothing <strong>next</strong> for the Serendipity Styx <em>“Next page”</em> yet. Maybe some other - <em>“next”</em> day..! <span class="emoji">😇</span></p>
 
             <p>In the meanwhile you should have a deep look into the <a href="/hc/en/">Help center [en] documentary</a> or visit the online <a href="/book/">Serendipity Styx Edition Book [de]</a>.</p>
 
