--- a/plugins/inc/bygroups_sidebar_en.htm
+++ b/plugins/inc/bygroups_sidebar_en.htm
@@ -835,7 +835,7 @@
             <dd class="plugin_maintainers">Serendipity Team</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 0.8</dd>
         </dl>
-        <p class="plugin_description">Shows top exit links from your blogs</p>
+        <p class="plugin_description">Shows top exit links from your Blogs</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_topexits.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_topexits">GitHub</a></li>
@@ -851,7 +851,7 @@
             <dd class="plugin_maintainers">Serendipity Team</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 0.8</dd>
         </dl>
-        <p class="plugin_description">Shows top sites that linked to your blogs</p>
+        <p class="plugin_description">Shows top sites that linked to your Blogs</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_topreferrers.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_topreferrers">GitHub</a></li>
