Add privacy webfonts usage

--- a/legal/privacy/index.html
+++ b/legal/privacy/index.html
@@ -94,6 +94,8 @@
                     <p>For the moment Styx itself does not explicitly collect any information about you. Getting in contact is a private request and underlies the trusted privacy between humans as in real life.</p>
                     <h2>However GitHub does!</h2>
                     <p>Styx is not responsible for collected access data within and over GitHub repositories and pages. As this Site is a GitHub hosted page, we advise you to read all about the GitHub <a href="https://help.github.com/terms" target="_blank">terms of service</a>, the GitHub <a href="https://help.github.com/privacy" target="_blank">privacy-policy</a> and what they say about the GitHub <a href="https://github.com/security" target="_blank">Security</a>. Styx has no access to the GitHub logs, apart from what they supply as a minimal "Traffic"-Information in a repository account.</p>
+                    <h2>Third party helpers</h2>
+                    <p>This site uses Google Webfonts to display nicely. Those are called via stylesheet at fonts.googleapis.com and fonts.gstatic.com. You all know Google does collect data. If you don't want this, you have to disallow these urls in your browsers privacy helper Add-ons.</p>
                     <p>This Privacy policy may change and therefore you should review it regularly.</p>
                 </div>
             </div>
