--- a/legal/privacy/index.html
+++ b/legal/privacy/index.html
@@ -90,13 +90,13 @@
                 <div class="col-document"><a name="privacy-policy"></a>
                     <h1>Styx Data privacy and protection policy</h1>
                     <p>You want Serendipity Styx to respect your privacy. This is what Styx does! Giving us any access information or personal information about yourself, you trust us to act in a responsible manner. That's why we have put a policy in place to protect your personal information. Please read on for more details about our privacy practices.</p>
+                    <p>This Privacy policy may change and therefore you should review it regularly.</p>
                     <h2>What information does Styx collect?</h2>
                     <p>For the moment Styx itself does not explicitly collect any information about you. Getting in contact is a private request and underlies the trusted privacy between humans as in real life.</p>
-                    <h2>However GitHub does!</h2>
+                    <p>However ... GitHub does!</p>
                     <p>Styx is not responsible for collected access data within and over GitHub repositories and pages. As this Site is a GitHub hosted page, we advise you to read all about the GitHub <a href="https://help.github.com/terms" target="_blank">terms of service</a>, the GitHub <a href="https://help.github.com/privacy" target="_blank">privacy-policy</a> and what they say about the GitHub <a href="https://github.com/security" target="_blank">Security</a>. Styx has no access to the GitHub logs, apart from what they supply as a minimal "Traffic"-Information in a repository account.</p>
                     <h2>Third party helpers</h2>
-                    <p>This site uses Google Webfonts to display nicely. Those are called via stylesheet at fonts.googleapis.com and fonts.gstatic.com. You all know Google does collect data. If you don't want this, you have to disallow these urls in your browsers privacy helper Add-ons.</p>
-                    <p>This Privacy policy may change and therefore you should review it regularly.</p>
+                    <p>This site uses Google Webfonts to display nicely. Those are called via stylesheet at fonts.googleapis.com and fonts.gstatic.com. You all know that Google does collect data (https://developers.google.com/fonts/faq). If you don't want this, you have to disallow these urls in your browsers privacy helper Add-ons.</p>
                 </div>
             </div>
         </div>
