hc - code-primers: Add imagemagick_nobang to core configurable vars

--- a/hc/en/code-primer.html
+++ b/hc/en/code-primer.html
@@ -195,6 +195,7 @@ print_r($entries);
   <li><code>$serendipity['calendars']</code>: Holds an array of available calendar types (gregorian and persian by default)</li>
   <li><code>$serendipity['charsets']</code>: Holds an array of supported charsets (native and UTF-8 by default)</li>
   <li><code>$serendipity['use_autosave']</code>: Whether to use local-browser autosaving feature (default true)</li>
+  <li><code>$serendipity['imagemagick_nobang']</code>: When enabled, ImageMagick image resizing operates with comma values, which can change the given image w/h setting by 1px by rounding differences (default false)</li>
   <li><code>$serendipity['imagemagick_thumb_parameters']</code>: Optional parameters passed to ImageMagick when creating thumbnails (default empty)</li>
   <li><code>$serendipity['logLevel']</code>: If set, enables using the Katzgrau KLogger (writes to “templates_c/logs/”). If set to “debug”, be extra verbose (default: ‘Off’)</li>
 </ul>
