hc - code-primers: Fix typos

--- a/hc/en/code-primer.html
+++ b/hc/en/code-primer.html
@@ -161,12 +161,12 @@ print_r($entries);
 <ul class="plainList">
   <li><code>$serendipity['versionInstalled']</code>: Current version number</li>
   <li><code>$serendipity['dbName']</code>: Database name</li>
-  <li><code>$serendipity['dbPrefix']</code>: Database prefix (prepended before internal table names)</li>
+  <li><code>$serendipity['dbPrefix']</code>: Database prefix (preceded before internal table names)</li>
   <li><code>$serendipity['dbHost']</code>: Database host</li>
   <li><code>$serendipity['dbUser']</code>: Database user</li>
   <li><code>$serendipity['dbPass']</code>: Database password</li>
   <li><code>$serendipity['dbType']</code>: Database type (=layer)</li>
-  <li><code>$serendipity['dbPersistent']</code>: Whether to use persistant connections</li>
+  <li><code>$serendipity['dbPersistent']</code>: Whether to use persistent connections</li>
 </ul>
 
 <p>On top of that, certain variables that are not included in the Serendipity Configuration panel can be configured in this file; If they are not present, the Serendipity defaults will be used. Such variables are:</p>
