--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -224,8 +224,8 @@
         <h4 class="plugin_summary">Announce entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_weblogping</dt>
-            <dd class="plugin_version">Version 1.12 (GPL, Last Updated 2017-11-06)</dd>
-            <dd class="plugin_maintainers">Serendipity Team</dd>
+            <dd class="plugin_version">Version 1.13 (GPL, Last Updated 2018-07-01)</dd>
+            <dd class="plugin_maintainers">Serendipity Team, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Send notification of new entries to online services</p>
@@ -240,7 +240,7 @@
         <h4 class="plugin_summary">CKEditor Plus</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_ckeditor</dt>
-            <dd class="plugin_version">Version 4.9.2.0 (GPL, Last Updated 2018-04-27)</dd>
+            <dd class="plugin_version">Version 4.9.2.0 (GPL, Last Updated 2018-07-01)</dd>
             <dd class="plugin_maintainers">Rustam Abdullaev, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0.0</dd>
         </dl>
@@ -464,7 +464,7 @@
         <h4 class="plugin_summary">Show Emoticon/Smiley toolbar</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_emoticonchooser</dt>
-            <dd class="plugin_version">Version 3.11 (GPL, Last Updated 2018-06-19)</dd>
+            <dd class="plugin_version">Version 3.20 (GPL, Last Updated 2018-07-01)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Jay Bertrandt, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -544,7 +544,7 @@
         <h4 class="plugin_summary">Trackback-Control</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_trackback</dt>
-            <dd class="plugin_version">Version 1.23 (GPL, Last Updated 2017-06-27)</dd>
+            <dd class="plugin_version">Version 1.24 (GPL, Last Updated 2018-07-01)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Malte Paskuda, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1</dd>
         </dl>
@@ -868,7 +868,7 @@
         <h4 class="plugin_summary">QuickNotes</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_adminnotes</dt>
-            <dd class="plugin_version">Version 0.24 (GPL, Last Updated 2018-04-15)</dd>
+            <dd class="plugin_version">Version 0.25 (GPL, Last Updated 2018-07-01)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Matthias Mees, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -1528,7 +1528,7 @@
         <h4 class="plugin_summary">Post via XML-RPC</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_xmlrpc</dt>
-            <dd class="plugin_version">Version 1.73 (GPL, Last Updated 2018-06-13)</dd>
+            <dd class="plugin_version">Version 1.74 (GPL, Last Updated 2018-07-01)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -1904,7 +1904,7 @@
         <h4 class="plugin_summary">Post via XML-RPC</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_xmlrpc</dt>
-            <dd class="plugin_version">Version 1.73 (GPL, Last Updated 2018-06-13)</dd>
+            <dd class="plugin_version">Version 1.74 (GPL, Last Updated 2018-07-01)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
