--- a/hc/en/code-primer.html
+++ b/hc/en/code-primer.html
@@ -324,7 +324,7 @@ print_r($entries);
   <li><strong>serendipity_db_implode</strong>: Operates on an array to prepare it for SQL usage.</li>
 </ul>
 
-<p>We offer those database layers, which all implement an identical interface accross all layers:</p>
+<p>We offer those database layers, which all implement an identical interface across all layers:</p>
 
 <ul>
   <li><strong>generic</strong>: zendframework-DB adapter</li>
@@ -343,7 +343,7 @@ print_r($entries);
 
 <ul>
   <li><strong>serendipity_db_query</strong>: Perform a DB Layer SQL query.</li>
-  <li><strong>serendipity_db_escape_string</strong>: Returns a escaped string, so that it can be safely included in a SQL string encapsulated within quotes, without allowing SQL injection.</li>
+  <li><strong>serendipity_db_escape_string</strong>: Returns an escaped string, so that it can be safely included in a SQL string encapsulated within quotes, without allowing SQL injection.</li>
   <li><strong>serendipity_db_limit</strong>: Returns the option to a LIMIT SQL statement, because it varies across DB systems</li>
   <li><strong>serendipity_db_limit_sql</strong>: Return a LIMIT SQL option to the DB Layer as a full LIMIT statement</li>
   <li><strong>serendipity_db_schema_import</strong>: Prepares a Serendipity query input to fully valid SQL. Replaces certain “template” variables.</li>
